# gpui_tesserae

./: .gitignore  Cargo.toml  README.md
.claude/: plan.md
crates/gpui_primitives/: Cargo.toml  README.md
crates/gpui_primitives/examples/: input.rs  selectable_layout.rs  selectable_text.rs
crates/gpui_primitives/src/: lib.rs  utils.rs
crates/gpui_primitives/src/extensions/: window.rs
crates/gpui_primitives/src/input/: cursor_blink.rs  elements.rs  mod.rs  selection.rs  state.rs  text_navigation.rs  text_transforms.rs
crates/gpui_primitives/src/selectable_layout/: mod.rs  state.rs
crates/gpui_primitives/src/selectable_text/: elements.rs  mod.rs  state.rs
crates/gpui_primitives/src/utils/: color.rs  concave_squircle.rs  mod.rs  rendering.rs  selection_shape.rs  text_navigation.rs  wrapped_text.rs
crates/gpui_tesserae_macros/: Cargo.toml
crates/gpui_tesserae_macros/src/: lib.rs
crates/gpui_tesserae_theme/: Cargo.toml
crates/gpui_tesserae_theme/src/: deserializers.rs  ext.rs  lib.rs  schema.rs
crates/gpui_tesserae_theme/themes/: default.json
crates/gpui_transitions/: Cargo.toml
crates/gpui_transitions/src/: lib.rs
examples/: example.rs
src/: init.rs  lib.rs
src/assets/: assets.rs  mod.rs  tesserae_assets.rs
src/components/: button.rs  chat_bubble.rs  checkbox.rs  icon.rs  input.rs  mod.rs  root.rs  switch.rs
src/components/button/: button.rs  mod.rs  toggle.rs
src/components/select/: item.rs  menu.rs  mod.rs  state.rs
src/extensions/: click_behavior.rs  clickable.rs  mod.rs  mouse_behavior.rs  mouse_handleable.rs
src/primitives/: deferrable.rs  focus_ring.rs  min_w0_wrapper.rs  mod.rs  root.rs
src/primitives/input/: mod.rs  state.rs
src/theme/: deserializers.rs  ext.rs  kinds.rs  mod.rs  schema.rs
src/themes/: default.json
src/utils/: border_color.rs  colors.rs  element.rs  element_id.rs  mod.rs  pixels.rs  squircle.rs  transitions.rs
src/views/: mod.rs  root.rs
themes/: default.json
