[package]
name = "gpui_tesserae"
version = "0.1.1"
edition = "2024"

[dependencies]
gpui_transitions = "0.1.2"

gpui = "0.2.2"
gpui_squircle = { git = "https://github.com/astrum-chat/gpui_squircle" }
smallvec = { version = "1.15.1", features = ["serde"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
cfg-if = "1.0.4"
enum-assoc = "1.2.4"
thiserror = "2.0.17"

# Input component.
unicode-segmentation = "1.12.0"

# Assets feature.
rust-embed = { version = "8.9.0", optional = true }

# Fixes "two different versions of crate `core_graphics` are being used" error.
core-text = "=21.0.0"

[patch.crates-io]
gpui = { git = "https://github.com/zed-industries/zed" }

[features]
default = ["assets", "test-support"]
assets = ["dep:rust-embed"]
test-support = ["gpui/test-support"]

[dev-dependencies]
rand = "0.9"
futures = "0.3"
