[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
#gpui_primitives = { git = "https://github.com/astrum-chat/gpui_tesserae" }
# Local development
gpui_primitives = { path = "crates/gpui_primitives" }

gpui_squircle = { git = "https://github.com/astrum-chat/gpui_squircle" }
gpui = "0.2.2"
gpui_transitions = "0.1.5"
smallvec = { version = "1.15.1", features = ["serde"] }
unicode-segmentation = "1.12.0"

[package]
name = "gpui_tesserae"
version = "0.1.1"
edition = "2024"

[dependencies]
gpui = { workspace = true }
gpui_primitives = { workspace = true, features = ["squircle"] }
smol = "2"
gpui_transitions = { workspace = true }
gpui_squircle = { workspace = true }
smallvec = { workspace = true }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
cfg-if = "1.0.4"
enum-assoc = "1.2.4"
thiserror = "2.0.17"
indexmap = "2.7"

# Assets feature.
rust-embed = { version = "8.9.0", optional = true, features = ["include-exclude"] }

# Fixes "two different versions of crate `core_graphics` are being used" error.
[target.'cfg(target_os = "macos")'.dependencies]
core-text = "=21.0.0"

[patch.crates-io]
gpui = { git = "https://github.com/zed-industries/zed" }

[features]
default = ["assets", "test-support"]
assets = ["dep:rust-embed"]
test-support = ["gpui/test-support", "gpui_primitives/test-support"]

[dev-dependencies]
rand = "0.9"
futures = "0.3"
