[package]
name = "gpui_primitives"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { workspace = true }
smallvec = { workspace = true }
unicode-segmentation = { workspace = true }
figma_squircle = "0.1"
lyon = { version = "1.0.16", features = ["extra"] }

[features]
default = []
test-support = ["gpui/test-support"]

[dev-dependencies]
futures-timer = "3"
