[package]
name = "gpui_primitives"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { workspace = true }
smallvec = { workspace = true }
unicode-segmentation = { workspace = true }

# Squircle feature.
figma_squircle = { version = "0.1", optional = true }
lyon = { version = "1.0.16", features = ["extra"], optional = true }


[dev-dependencies]
futures-timer = "3"

[features]
default = []
debug = []
squircle = ["dep:figma_squircle", "dep:lyon"]
test-support = ["gpui/test-support"]

[[example]]
name = "selectable_layout"
required-features = ["squircle"]
